<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tradez_ads"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/nav_tradez_ads" />
        <item
            android:id="@+id/nav_post_your_ad"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/nav_post_your_ad" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_my_account" />

    </group>

    <item android:title="Self-Help">
        <menu>
            <item
                android:id="@+id/nav_stay_safe"
                android:icon="@drawable/ic_warning_black_24dp"
                android:title="@string/nav_stay_safe" />
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/nav_faq" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>
